# ChangeLog for net-firewall/firewall-mv
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*firewall-mv-7.1 (11 Oct 2013)

  11 Oct 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*firewall-mv-6.11 (09 Sep 2013)

  09 Sep 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Support loading of modules

*firewall-mv-6.10 (10 Aug 2013)

  14 Aug 2013; Martin Väth <martin@mvath.de>:
  Simplify EPREFIX (without revision bump)

  10 Aug 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Support systemd

*firewall-mv-6.9 (09 May 2013)

  09 May 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Support old and new names (eth* lan* net*)

*firewall-mv-6.8 (01 Apr 2013)

  01 Apr 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Rename eth* -> net* in defaults

*firewall-mv-6.7 (13 Feb 2013)

  13 Feb 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Default to -m conntrack instead of -m state

*firewall-mv-6.6 (07 May 2012)

  28 Sep 2012; Martin Väth <martin@mvath.de>:
  Bump to EAPI=5

  12 May 2012; Martin Väth <martin@mvath.de>:
  base->eutils

  07 May 2012; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*firewall-mv-6.5 (04 May 2012)

  04 May 2012; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*firewall-mv-6.4 (22 Apr 2012)

  22 Apr 2012; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*firewall-mv-6.3 (08 Apr 2012)

  15 Apr 2012; Martin Väth <martin@mvath.de>:
  Inherit base

  08 Apr 2012; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*firewall-mv-6.2 (28 Feb 2012)

  19 Mar 2012; Martin Väth <martin@mvath.de>:
  Use vcs-snapshot.eclass

  28 Feb 2012; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*firewall-mv-6.1 (04 Feb 2012)

  04 Feb 2012; Martin Väth <martin@mvath.de>: