@@ -1,1 +1,1 @@
-DIST firewall-mv-7.1.tar.gz 14019 SHA256 3050dc65b724d7676f9394d8d3782eea03ca43ac8a072d7e0f5fbed9d067880b SHA512 9e48cae486e6865b827fc71aec2a2f9c7ef96086fe140c6fbad297d8145bbc3a2f502c8bbdc768b8932baaee86d4c36442aafd763491898bef752974c50bc319 WHIRLPOOL d13835540cca86d29b63f4e3ff5fc4a61c072b2db1b1f4ede1e9ac1e9de9ff964358bb7616111d10ef4a4a4289d1e29cb45b4966e0f7a053411f5f0851527f5e
+DIST firewall-mv-7.2.tar.gz 14871 SHA256 d6038e4d986e29bef49f54e09640442956c1c38977ae98b846f2b50fe06deef6 SHA512 1e2ee0f85e854e85036a0a1dcf3a75eb02ff41a5d56e8ffa6e1a16bd6dde2baa0c244c04707388e0273f874f9754f3fbb94ca748704ae83779b309ab01776951 WHIRLPOOL 3c60c84bf2addce8fadb8e1550b3cb2c3fd7e460ac7e176799283f56baf59285b35b6efc97e74e497acb062e34ad0481c94b4a7a28a10bfa9432eb7479cb2a06
