@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*firewall-mv-7.2 (13 Oct 2013)
+
+  13 Oct 2013; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild.
+
 *firewall-mv-7.1 (11 Oct 2013)
 
   11 Oct 2013; Martin Väth <martin@mvath.de>:
